tests/error_corpus/parse_errors/E369_nonvocal_label_mismatch.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	Expected error: E369 (Nonvocal label mismatch)
@Comment:	Trigger: Nonvocal begin/end labels don't match
*CHI:	hello &{laughing} world &{crying} .
@End
